<resources>
    <string name="app_name">Conference Connect</string>
    <string name="scan_text">Scan QR Code</string>
    <string name="login_text">Login to LinkedIn</string>
    <string name="title_code_scanner">Join Event</string>
    <string name="title_login">Login to Account</string>
    <string name="title_connect">Connect</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="title_summary">Summary</string>
    <string name="title_bt">Discoverable</string>
</resources>
