<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <group
            android:id="@+id/nav_screens"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/title_home" />
            <item
                android:id="@+id/nav_connect"
                android:icon="@drawable/ic_connect"
                android:title="@string/title_connect" />
            <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/ic_schedule"
                android:title="@string/title_schedule" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/title_settings" />
        </group>
        <group
            android:id="@+id/nav_extra"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_bt"
                android:icon="@drawable/ic_bluetooth"
                android:title="@string/title_bt"/>
            <ToggleButton
                android:id="@+id/nav_bt_switch"/>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_help"
                android:title="@string/title_home" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/title_connect" />
        </group>
    </group>
</menu>